<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="16dp">

    <TextView
            android:id="@+id/account_text_title"
            android:text="@string/title_account"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
            android:id="@+id/account_image_user"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_person_black_24dp"
            app:layout_constraintTop_toBottomOf="@id/account_text_title"
            app:layout_constraintBottom_toTopOf="@id/account_payment"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/account_name"
            android:layout_marginRight="16dp"
    />

    <android.support.design.widget.TextInputLayout
            android:id="@+id/account_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/account_text_title"
            app:layout_constraintBottom_toTopOf="@id/account_payment"
            app:layout_constraintLeft_toRightOf="@id/account_image_user"
            app:layout_constraintRight_toRightOf="parent">

        <AutoCompleteTextView
                android:layout_width="match_parent"
                android:id="@+id/text_name"
                android:layout_height="wrap_content"
                android:hint="@string/account_name"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/account_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/account_image_user"
            app:layout_constraintBottom_toTopOf="@id/account_email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

        <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account_payment"
                android:inputType="text"
                android:maxLines="1"
                android:id="@+id/text_payment"
                android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/account_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/account_payment"
            app:layout_constraintBottom_toTopOf="@id/account_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

        <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="text"
                android:maxLines="1"
                android:focusable="false"
                android:editable="false"
                android:id="@+id/text_email"
                android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/account_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/account_email"
            app:layout_constraintBottom_toTopOf="@id/account_button_ok"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:id="@+id/text_password"
                android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <Button
            android:id="@+id/account_button_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_save_changes"
            app:layout_constraintTop_toBottomOf="@id/account_password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
    />

</android.support.constraint.ConstraintLayout>